--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,6 @@
 {
   "presets": [
-    ["env", {
-      "modules": false
-    }],
-    "stage-2"
-  ],
-  "plugins": ["transform-runtime"],
-  "env": {
-    "test": {
-      "presets": ["env", "stage-2"]
-    }
-  }
+    ["env", { "modules": false }],
+    "stage-3"
+  ]
 }
