--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 .DS_Store
 node_modules/
-/dist/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-/test/e2e/reports/
-selenium-debug.log
+dist/
+npm-debug.log
+yarn-error.log
